--- a/package.json
+++ b/package.json
@@ -5,12 +5,18 @@
   "main": "index.js",
   "scripts": {
     "build": "tailwindcss build ./src/styles.css -o ./public/styles.css",
-    "prod": "NODE_ENV=production tailwindcss build ./src/styles.css -o ./public/styles.css"
+    "prod": "cross-env NODE_ENV=production tailwindcss build ./src/styles.css -o ./public/styles.css"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tailwindcss/forms": "^0.3.3",
+    "@tailwindcss/typography": "^0.4.1",
     "tailwindcss": "^2.0.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.3.1",
+    "cross-env": "^7.0.3"
   }
 }
