--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.3.1",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "tailwindcss-debug-screens": "^2.0.0"
   }
 }
